@startuml modell

skinparam linetype ortho

class Platesamling {
    -eier: Eier
    -album: dict[str, list[Album]] <<ordbok fra artistnavn til album>>
    --
    +legg_til_album(album: Album)
    +legg_til_artist(artist: Artist)
    +vis_album_navn(artist: Optional[Artist] = None)
    +vis_artister()
    +vis_info()
    +__str__() -> str
}

class Album {
    -navn: str
    -artist: Artist
    -plateselskap: str
    -utgivelsesår: int
    --
    +@property navn() -> str
    +@property artist() -> Artist
    +vis_info()
    +__str__() -> str
}

class CD {
    +__str__() -> str
}

class Vinyl {
    -hastighet: int <<enten 33 eller 45 rpm>>
    -farge: tuple[int, int, int] <<farge i rgb format>>
    --
    +__str__() -> str
}

class Person {
    -navn: str
    --
    +@property navn() -> str
    +__str__() -> str
}

class Eier

class Artist

Platesamling "0..*" *--- "1" Eier : < eier
Platesamling "1" ---o "0..*" Album : > inneholder

Album "0..*" *-- "1" Artist : < har laget

Person <|-- Eier
Person <|-- Artist

Album <|-- CD
Album <|-- Vinyl

@enduml